# PCL_Tutorials

./: CMakeLists.txt  README.md
basic/: CloudTransformation.cpp  NearestNeighborSearch.cpp
features/: EstimatingSurfaceNormals.cpp  FastPointFeatureHistograms.cpp  NARFFeaturesFromRangeImage.cpp  NormalEstimationUsingIntegralImages.cpp  PointFeatureHistograms.cpp  RotationalProjectionStatistics.cpp
filter/: ExtractingIndices.cpp  PassThrough.cpp  StatisticalOutlierRemoval.cpp  VoxelGrid.cpp
gpu/: ExampleCUDA.cu  FastPointFeatureHistograms.cpp  NormalEstimation.cpp  PoseEstimation.cpp  Segmentation.cpp  runnable
models/: test_pcd.pcd  test_pcd_intensity.pcd
models/gpu/output/: cloud_cluster_0.pcd  cloud_cluster_2.pcd  gpu_cloud_cluster_0.pcd  gpu_cloud_cluster_1.pcd  gpu_cloud_cluster_2.pcd
models/output/: bun0-mls.pcd  table_scene_mug_stereo_textured_hull.pcd  trained_ism_model.txt
models/recognition/: trained_ism_model.txt
models/registration/: monkey.ply
recognition/: CorrespondenceGrouping.cpp  ImplicitShapeModel.cpp
registration/: ICPMultipleClouds.cpp  IterativeClosestPoint.cpp  NormalDistributionTransform.cpp  PoseEstimation.cpp
segmentation/: CylinderModelSegmentation.cpp  EuclideanClusterExtraction.cpp  PlaneModelSegmentation.cpp
surface/: ConcaveConvexHull2D.cpp  Resampling.cpp  Triangulation.cpp
utils/: timer.hpp
